sass/compareFramework.scss
/* Bootstrap column customizations */
.centered {
    text-align: center;
}

.col-md-15 {
    position: relative;
    min-height: 1px;
    padding-right: 10px;
    padding-left: 10px;
}
@media (min-width: 992px) {
    .col-md-15 {
        width: 20%;
        float: left;
    }
}
/* -----------------------------------*/

/* Modal table styling */
#addFrameworksTable_filter label {
    display: block;
    margin: 0px;
}

.dataTables_wrapper table thead {
    display:none;
}
.dataTables_wrapper .dataTables_paginate {
    display:none;
}
.dataTables_wrapper table {
    width: 100%;
}
.dataTables_wrapper {
    border-radius: 6px;
}
table.dataTable.no-footer {
    border: none;
}
#addFrameworksTable_wrapper tr {
    cursor: pointer;
}
#addFrameworksTable_wrapper .dataTables_empty {
    background-color: #555;
    color: #fff;
    cursor: not-allowed;
    height: 30px;
    font-size: 16px;
    line-height: 30px;
}
input.modal-search {
    display: block;
    width: 100%;
    height: 50px;
    padding: 6px 12px;
    font-size: 22px;
    line-height: 1.42857143;
    color: #555;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15;
}
.modal-search-feedback {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 2;
    display: block;
    width: 50px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    pointer-events: none;
}
/* -----------------------------------*/

/* Style of addFramework Item */
#addFrameworksTable .thumb-framework {
    height: 40px;
    width: 40px;
    background: white;
    border: 1px solid #e6e6e6;
    border-radius: 2px;
    display: block;
    padding: 2px;
    margin-right: 10px;
    float: left;
}

#addFrameworksTable .thumb-framework img {
    height: 34px;
    max-width: 34px;
}

#addFrameworksTable .thumb-title {
    display: block;
    font-size: 16px;
    font-weight: 800;
}

#addFrameworksTable .thumb-status.active {
    color: #9BB831;
}

#addFrameworksTable .thumb-add {
    top: 14px;
    right: 8px;
    color: #337ab7;
}
/* -----------------------------------*/

/* Add framework to compare button */
button.add-framework {
    height: 150px;
    width: 150px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.add-framework .add-framework-icon {
    display: block;
    font-size: 70px;
    margin: 10px;
    padding-left: 10px;
}
/* -----------------------------------*/

/* Styling of framework comparison header */
.compare-header {
    margin-bottom: 30px;
}
.header-container {
    min-height: 190px;
}
.header-container.head1 {
    background: rgb(105, 153, 193);
    border-bottom: thick solid rgb(72, 109, 139);
}
.header-container.head2 {
    background: rgb(134, 162, 77);
    border-bottom: thick solid rgb(108, 131, 62);
}
.header-container.head3 {
    background: rgb(253, 161, 49);
    border-bottom: thick solid rgb(199, 127, 40);
}
.header-container.head4 {
    background: #555497;
    border-bottom: thick solid #36347A;
}
.header-container.head5 {
    background: #D7BC68;
    border-bottom: thick solid #856A16;
}
.framework-header img {
    max-width: 150px;
    height: 80px;
}
.framework-header .caption {
    width: 100%;
    table-layout: fixed;
}
.framework-header .caption span {
    margin-right: 4px;
    padding-left: 10px;
    top: 4px;
    color: white;
    font-size: 20px;
}
.framework-header .caption span:hover {
    color: red;
    cursor: pointer;
}
.framework-header .caption h4 {
    display: inline-block;
    color: white;
}
.framework-header {
    text-align: center;
    min-width: 180px;
    position: absolute;
    top: 50%; left: 50%;
    transform: translate(-50%,-50%);
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%); /* IE 9 */
}
.data-status {
    color: lightgray;
    font-size: small;
}
/* -----------------------------------*/

/* Styling of feature header column */
a[aria-expanded=false] .glyphicon-chevron-up {
   display: none;
}
a[aria-expanded=true] .glyphicon-chevron-down {
   display: none;
}
.dropIcon {
    color: #337ab7;
}
.no-padding {
   padding: 0 !important;
}
.no-left-padding {
    padding-left: 0px !important;
}
.no-right-padding {
    padding-right: 0px !important;
}
.no-side-padding {
    padding: 15px 0 0 !important;
}
.feature-heading {
    position: relative;
    display: block;
    padding: 10px 15px;
    //margin-bottom: -1px;
    border-top: 1px solid #ddd;
}
/* -----------------------------------*/

/* Styling of feature items and item-column */
.feature-item {
    position: relative;
    display: block;
    padding: 10px 0px;
    //margin-bottom: -1px;
    border-top: 1px solid #ddd;
}
i.check {
    color: green;
}
i.uncheck {
    color: red;
}
.body1 {
    background: rgb(224,234,242);
}
.body2 {
    background: rgb(230,235,218);
}
.body3 {
    background: rgb(254,235,212);
}
.body4 {
    background: #AEADD1;
}
.body5 {
    background: #F7E7A8;
}
.panel-footer span {
    padding-left: 10px;
}
/* -----------------------------------*/

/* Styling of collapse all panels button */
#btnCollapseAll {
    margin-bottom: 10px;
}
#btnCollapseAll span {
    padding-right: 10px;
    top: 2px; 
}
/* -----------------------------------*/

